force-app/main/default/objects/Implementation_Services__c/fields/NCS_Agenday_Configuration__c.field-meta.xml
<CustomField>
    <fullName>NCS_Agenday_Configuration__c</fullName>
    <label>Agenday Configuration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Domain(s)</fullName>
                <default>true</default>
                <label>Domain(s)</label>
            </value>
            <value>
                <fullName>Email(s)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>