force-app/main/default/objects/Implementation_Services__c/fields/NCS_Agenday_Domain_2__c.field-meta.xml
<CustomField>
    <fullName>NCS_Agenday_Domain_2__c</fullName>
    <label>Agenday Domain #2</label>
    <type>Url</type>
</CustomField>