force-app/main/default/objects/Implementation_Services__c/fields/NCS_BillTo_Address__c.field-meta.xml
<CustomField>
    <fullName>NCS_BillTo_Address__c</fullName>
    <label>Bill-to Address</label>
    <length>50</length>
    <type>Text</type>
</CustomField>