force-app/main/default/objects/Implementation_Services__c/fields/NCS_BillTo_Name__c.field-meta.xml
<CustomField>
    <fullName>NCS_BillTo_Name__c</fullName>
    <label>Bill-to Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>