force-app/main/default/objects/Implementation_Services__c/fields/NCS_BillTo_Phone__c.field-meta.xml
<CustomField>
    <fullName>NCS_BillTo_Phone__c</fullName>
    <label>Bill-to Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>