force-app/main/default/objects/Implementation_Services__c/fields/NCS_BillTo_Type__c.field-meta.xml
<CustomField>
    <fullName>NCS_BillTo_Type__c</fullName>
    <label>Bill-To Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Central</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Moderator</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>