force-app/main/default/objects/Implementation_Services__c/fields/NCS_Block_GM_Web_Per_Minute__c.field-meta.xml
<CustomField>
    <fullName>NCS_Block_GM_Web_Per_Minute__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Block GM Web Per Minute</label>
    <type>Checkbox</type>
</CustomField>