force-app/main/default/objects/Implementation_Services__c/fields/NCS_Bridge_Group__c.field-meta.xml
<CustomField>
    <fullName>NCS_Bridge_Group__c</fullName>
    <label>Bridge Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>