force-app/main/default/objects/Implementation_Services__c/fields/NCS_Campaign__c.field-meta.xml
<CustomField>
    <fullName>NCS_Campaign__c</fullName>
    <label>Campaign</label>
    <length>255</length>
    <type>Text</type>
</CustomField>