force-app/main/default/objects/Implementation_Services__c/fields/NCS_Company_Address1__c.field-meta.xml
<CustomField>
    <fullName>NCS_Company_Address1__c</fullName>
    <label>Company Address 1</label>
    <length>50</length>
    <type>Text</type>
</CustomField>