force-app/main/default/objects/Implementation_Services__c/fields/NCS_Company_Country__c.field-meta.xml
<CustomField>
    <fullName>NCS_Company_Country__c</fullName>
    <label>Company Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>