force-app/main/default/objects/Implementation_Services__c/fields/NCS_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>NCS_Company_Name__c</fullName>
    <inlineHelpText>For iMeet companies, this &quot;Company Name&quot; will be used in the Room name.
Example: PGi = www.imeet.com/PGi/HostName</inlineHelpText>
    <label>Company Name </label>
    <length>255</length>
    <type>Text</type>
</CustomField>