force-app/main/default/objects/Implementation_Services__c/fields/NCS_Company_Region__c.field-meta.xml
<CustomField>
    <fullName>NCS_Company_Region__c</fullName>
    <label>Company Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NA</fullName>
                <label>North America</label>
            </value>
            <value>
                <fullName>EMEA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>