force-app/main/default/objects/Implementation_Services__c/fields/NCS_Do_Not_Solicit__c.field-meta.xml
<CustomField>
    <fullName>NCS_Do_Not_Solicit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Solicit</label>
    <type>Checkbox</type>
</CustomField>