force-app/main/default/objects/Implementation_Services__c/fields/NCS_Existing_BillTo_Client__c.field-meta.xml
<CustomField>
    <fullName>NCS_Existing_BillTo_Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Existing Bill-to Client</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>PGi_Client__c.PGi_Company__c</field>
            <operation>notEqual</operation>
            <value/>
        </filterItems>
        <filterItems>
            <field>PGi_Client__c.PGi_Company__r.RelatedAccount__c</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <infoMessage>Please select an Existing Bill-to Client from Salesforce. This data is syncronized regularly, but if you cannot find the Client please open a Salesforce case.

To start, this list is filtered to Clients that are associated with your Account.</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>PGi_Client__c</referenceTo>
    <relationshipLabel>Implementation Services</relationshipLabel>
    <relationshipName>IST_BillTos</relationshipName>
    <type>Lookup</type>
</CustomField>