force-app/main/default/objects/Implementation_Services__c/fields/NCS_Existing_BillTo_Client_ID__c.field-meta.xml
<CustomField>
    <fullName>NCS_Existing_BillTo_Client_ID__c</fullName>
    <label>Existing Bill-to Client ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>