force-app/main/default/objects/Implementation_Services__c/fields/NCS_Existing_Corporate_Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>NCS_Existing_Corporate_Customer_Name__c</fullName>
    <label>Existing Corporate Customer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>