force-app/main/default/objects/Implementation_Services__c/fields/NCS_Existing_Enterprise__c.field-meta.xml
<CustomField>
    <fullName>NCS_Existing_Enterprise__c</fullName>
    <label>Existing Enterprise</label>
    <length>255</length>
    <type>Text</type>
</CustomField>