force-app/main/default/objects/Implementation_Services__c/fields/NCS_GM_Skype_Server__c.field-meta.xml
<CustomField>
    <fullName>NCS_GM_Skype_Server__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GM Skype Server</label>
    <type>Checkbox</type>
</CustomField>