force-app/main/default/objects/Implementation_Services__c/fields/NCS_GM_Version__c.field-meta.xml
<CustomField>
    <fullName>NCS_GM_Version__c</fullName>
    <label>GM Version</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5.0</fullName>
                <default>true</default>
                <label>5.0</label>
            </value>
            <value>
                <fullName>4.0</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>