force-app/main/default/objects/Implementation_Services__c/fields/NCS_Inherit_Rates_of_Parent__c.field-meta.xml
<CustomField>
    <fullName>NCS_Inherit_Rates_of_Parent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Company Inherit Rates of Parent</label>
    <type>Checkbox</type>
</CustomField>