force-app/main/default/objects/Implementation_Services__c/fields/NCS_Invoice_Delivery__c.field-meta.xml
<CustomField>
    <fullName>NCS_Invoice_Delivery__c</fullName>
    <label>Invoice Delivery</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full Detail (Charges apply)</fullName>
                <default>true</default>
                <label>Full Detail (Charges apply)</label>
            </value>
            <value>
                <fullName>Summary - Remittance Only</fullName>
            </value>
            <value>
                <fullName>Paperless - Online PDF Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>