force-app/main/default/objects/Implementation_Services__c/fields/NCS_Invoice_Layout__c.field-meta.xml
<CustomField>
    <fullName>NCS_Invoice_Layout__c</fullName>
    <label>Invoice Layout</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Moderator Summary</fullName>
                <default>true</default>
                <label>Moderator Summary</label>
            </value>
            <value>
                <fullName>PO Sort</fullName>
            </value>
            <value>
                <fullName>Conf Title Sort</fullName>
            </value>
            <value>
                <fullName>Participant Level Detail</fullName>
            </value>
            <value>
                <fullName>Canada Tax E-File Level Detail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>