force-app/main/default/objects/Implementation_Services__c/fields/NCS_Is_BillTo_Admin__c.field-meta.xml
<CustomField>
    <fullName>NCS_Is_BillTo_Admin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Bill-to as Admin</label>
    <type>Checkbox</type>
</CustomField>