force-app/main/default/objects/Implementation_Services__c/fields/NCS_Is_BillTo_Licensed_User__c.field-meta.xml
<CustomField>
    <fullName>NCS_Is_BillTo_Licensed_User__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Bill-to Is Licensed User</label>
    <type>Checkbox</type>
</CustomField>