force-app/main/default/objects/Implementation_Services__c/fields/NCS_Is_Existing_Corporate_Customer__c.field-meta.xml
<CustomField>
    <fullName>NCS_Is_Existing_Corporate_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Existing Corporate Customer</label>
    <type>Checkbox</type>
</CustomField>