force-app/main/default/objects/Implementation_Services__c/fields/NCS_Is_HD_Audio_Required__c.field-meta.xml
<CustomField>
    <fullName>NCS_Is_HD_Audio_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HD Audio Required</label>
    <type>Checkbox</type>
</CustomField>