force-app/main/default/objects/Implementation_Services__c/fields/NCS_New_Numbers__c.field-meta.xml
<CustomField>
    <fullName>NCS_New_Numbers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Numbers</label>
    <type>Checkbox</type>
</CustomField>