force-app/main/default/objects/Implementation_Services__c/fields/NCS_Number_Presentment__c.field-meta.xml
<CustomField>
    <fullName>NCS_Number_Presentment__c</fullName>
    <label>Number Presentment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NAM numbers on top</fullName>
                <default>true</default>
                <label>NAM numbers on top</label>
            </value>
            <value>
                <fullName>All locations alphabetically</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>