force-app/main/default/objects/Implementation_Services__c/fields/NCS_Parent_Company__c.field-meta.xml
<CustomField>
    <fullName>NCS_Parent_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Company</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>PGi_Company__c.RelatedAccount__c</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <infoMessage>Please select an Existing Parent Company from Salesforce. This data is syncronized regularly, but if you cannot find the Company please open a Salesforce case.

To start, this list is filtered to Companies that are associated with your Account.</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>PGi_Company__c</referenceTo>
    <relationshipLabel>Implementation Services</relationshipLabel>
    <relationshipName>IST_Parent_Companies</relationshipName>
    <type>Lookup</type>
</CustomField>