force-app/main/default/objects/Implementation_Services__c/fields/NCS_Parent_Company_ID__c.field-meta.xml
<CustomField>
    <fullName>NCS_Parent_Company_ID__c</fullName>
    <label>Parent Company ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>