force-app/main/default/objects/Implementation_Services__c/fields/NCS_Port_Numbers__c.field-meta.xml
<CustomField>
    <fullName>NCS_Port_Numbers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Port Numbers</label>
    <type>Checkbox</type>
</CustomField>