force-app/main/default/objects/Implementation_Services__c/fields/NCS_Progress__c.field-meta.xml
<CustomField>
    <fullName>NCS_Progress__c</fullName>
    <label>NCS Progress</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>sc1_1</fullName>
                <label>Section 1: Company Info</label>
            </value>
            <value>
                <fullName>sc1_p</fullName>
                <label>Section 1: Partners</label>
            </value>
            <value>
                <fullName>sc1_2</fullName>
                <label>Section 1: Bill-to</label>
            </value>
            <value>
                <fullName>sc1_3</fullName>
                <label>Section 1: Portal Admin/Cloud Control/Agenday Admin Client</label>
            </value>
            <value>
                <fullName>sc1_4</fullName>
                <label>Section 1: Audio and GlobalMeet (includes License and Per Minute)</label>
            </value>
            <value>
                <fullName>sc1_5</fullName>
                <label>Section 1: iMeet</label>
            </value>
            <value>
                <fullName>sc1_6</fullName>
                <label>Section 1: Agenday</label>
            </value>
            <value>
                <fullName>sc1_7</fullName>
                <label>Section 1: Video Services</label>
            </value>
            <value>
                <fullName>sc1_8</fullName>
                <label>Section 1: UCaaS</label>
            </value>
            <value>
                <fullName>sc1_8cpe</fullName>
                <label>Section 1: UCaaS CPEs</label>
            </value>
            <value>
                <fullName>sc2_1</fullName>
                <label>Section 2: Invoice Format &amp; Layout Options</label>
            </value>
            <value>
                <fullName>sc3_1</fullName>
                <label>Section 3: Rate Information</label>
            </value>
            <value>
                <fullName>sc4_1</fullName>
                <label>Section 4: Sales Info</label>
            </value>
            <value>
                <fullName>scA</fullName>
                <label>Finale: Signed Agreement</label>
            </value>
            <value>
                <fullName>Ready</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Pending Provisioning</fullName>
            </value>
            <value>
                <fullName>Provisioning: Success</fullName>
            </value>
            <value>
                <fullName>Provisioning: Failure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>