force-app/main/default/objects/Implementation_Services__c/fields/NCS_Provider_ID__c.field-meta.xml
<CustomField>
    <fullName>NCS_Provider_ID__c</fullName>
    <label>Partner Use: Provider ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>