force-app/main/default/objects/Implementation_Services__c/fields/NCS_Rate_Change_to_Affiliates__c.field-meta.xml
<CustomField>
    <fullName>NCS_Rate_Change_to_Affiliates__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rate Changes applies to Affiliates</label>
    <type>Checkbox</type>
</CustomField>