force-app/main/default/objects/Implementation_Services__c/fields/NCS_Requested_URL_GM__c.field-meta.xml
<CustomField>
    <fullName>NCS_Requested_URL_GM__c</fullName>
    <label>Requested URL (*.globalmeet.com)</label>
    <type>Url</type>
</CustomField>