force-app/main/default/objects/Implementation_Services__c/fields/NCS_Requested_URL_IM__c.field-meta.xml
<CustomField>
    <fullName>NCS_Requested_URL_IM__c</fullName>
    <label>Requested URL (imeet.com/*)</label>
    <type>Url</type>
</CustomField>