force-app/main/default/objects/Implementation_Services__c/fields/NCS_Sales_Channel__c.field-meta.xml
<CustomField>
    <fullName>NCS_Sales_Channel__c</fullName>
    <label>Sales Channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>