force-app/main/default/objects/Implementation_Services__c/fields/NCS_Service_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>NCS_Service_Contact_Name__c</fullName>
    <label>Service Contact Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>