force-app/main/default/objects/Implementation_Services__c/fields/NCS_SFDC_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>NCS_SFDC_Account_ID__c</fullName>
    <formula>Related_Opportunity__r.SFDC_Account_ID__c</formula>
    <inlineHelpText>This value is auto populated based off the Account that the Related Opportunity belongs to. This ID will be used for manual provisioning of customers to be populated as the SF Account ID within TESLA.</inlineHelpText>
    <label>SFDC Account ID</label>
    <type>Text</type>
</CustomField>