force-app/main/default/objects/Implementation_Services__c/fields/NCS_SOTS_Codes__c.field-meta.xml
<CustomField>
    <fullName>NCS_SOTS_Codes__c</fullName>
    <inlineHelpText>Enter each SOTS Code on its own line</inlineHelpText>
    <label>SOTS Codes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>