force-app/main/default/objects/Implementation_Services__c/fields/NCS_Standalone_Automated_Conferencing__c.field-meta.xml
<CustomField>
    <fullName>NCS_Standalone_Automated_Conferencing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Standalone Automated Conferencing</label>
    <type>Checkbox</type>
</CustomField>