force-app/main/default/objects/Implementation_Services__c/fields/NCS_Territory_Code__c.field-meta.xml
<CustomField>
    <fullName>NCS_Territory_Code__c</fullName>
    <label>Territory Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>