force-app/main/default/objects/Implementation_Services__c/fields/NCS_Use_Existing_BillTo_Client_ID__c.field-meta.xml
<CustomField>
    <fullName>NCS_Use_Existing_BillTo_Client_ID__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Existing Bill-to Client ID</label>
    <type>Checkbox</type>
</CustomField>