force-app/main/default/objects/Implementation_Services__c/fields/NCS_Video_Invoice_Delivery__c.field-meta.xml
<CustomField>
    <fullName>NCS_Video_Invoice_Delivery__c</fullName>
    <label>Video Invoice Delivery</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email (default is bill-to email address)</fullName>
                <default>true</default>
                <label>Email (default is bill-to email address)</label>
            </value>
            <value>
                <fullName>Hardcopy via mail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>