force-app/main/default/objects/Implementation_Services__c/fields/NCS_Video_Services__c.field-meta.xml
<CustomField>
    <fullName>NCS_Video_Services__c</fullName>
    <label>Video Services</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Managed Services</fullName>
            </value>
            <value>
                <fullName>Managed Conference</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>