force-app/main/default/objects/Implementation_Services__c/fields/of_On_Site_Training_Attendees__c.field-meta.xml
<CustomField>
    <fullName>of_On_Site_Training_Attendees__c</fullName>
    <label># of On-Site Training Attendees</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>