force-app/main/default/objects/Implementation_Services__c/fields/On_Hold_Notes__c.field-meta.xml
<CustomField>
    <fullName>On_Hold_Notes__c</fullName>
    <label>On-Hold Notes</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>