force-app/main/default/objects/Implementation_Services__c/fields/On_Site_Awareness_Day_Info_Booth__c.field-meta.xml
<CustomField>
    <fullName>On_Site_Awareness_Day_Info_Booth__c</fullName>
    <defaultValue>false</defaultValue>
    <label>On-Site Awareness Day / Info Booth</label>
    <type>Checkbox</type>
</CustomField>