force-app/main/default/objects/Implementation_Services__c/fields/Oppty_s_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Oppty_s_Account_ID__c</fullName>
    <formula>Related_Opportunity__r.AccountId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Oppty&apos;s Account ID</label>
    <type>Text</type>
</CustomField>