force-app/main/default/objects/Implementation_Services__c/fields/Owner_Region__c.field-meta.xml
<CustomField>
    <fullName>Owner_Region__c</fullName>
    <formula>TEXT( Implementation_Owner__r.User_Region__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner&apos;s Region</label>
    <type>Text</type>
</CustomField>