force-app/main/default/objects/Implementation_Services__c/fields/Phase_1_Days_Left__c.field-meta.xml
<CustomField>
    <fullName>Phase_1_Days_Left__c</fullName>
    <formula>IF(Phase_1_Pause_Date__c &lt;&gt; null, Phase_1_Pause_Date__c, Phase_1_End_Date__c) - Phase_1_Start_Date__c + Phase_1_Pause_Days__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phase 1 (Plan) Days Left</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>