force-app/main/default/objects/Implementation_Services__c/fields/Phase_1_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Phase_1_Start_Date__c</fullName>
    <label>Phase 1 (Plan) Start Date</label>
    <type>Date</type>
</CustomField>