force-app/main/default/objects/Implementation_Services__c/fields/Phase_2_Days_Left__c.field-meta.xml
<CustomField>
    <fullName>Phase_2_Days_Left__c</fullName>
    <formula>IF(Phase_2_Pause_Date__c &lt;&gt; null, Phase_2_Pause_Date__c, Phase_2_End_Date__c) - Phase_2_Start_Date__c + Phase_2_Pause_Days__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phase 2 (Build) Days Left</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>