force-app/main/default/objects/Implementation_Services__c/fields/Phase_2_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Phase_2_End_Date__c</fullName>
    <label>Phase 2 (Build) End Date</label>
    <type>Date</type>
</CustomField>